# Gear

./: Cargo.toml  README.md
gear/: Cargo.toml  build.rs
gear/examples/sandbox/: main.rs
gear/examples/sandbox/assets/: frag.glsl  light.glsl  vert.glsl
gear/src/: application.rs  lib.rs
gear/src/core/: application.rs  layer.rs  logger.rs  mod.rs  window.rs
gear/src/core/application/: context.rs  mod.rs  state.rs
gear/src/core/assets/: mod.rs
gear/src/core/entity/: buffer.rs  light.rs  mesh.rs  mod.rs  renderable.rs  transform.rs
gear/src/core/event/: dispatch.rs  event.rs  mod.rs
gear/src/core/layer/: imgui.rs  layer.rs  mod.rs
gear/src/core/renderer/: mod.rs
gear/src/core/renderer/camera/: mod.rs
gear/src/core/renderer/shader/: mod.rs  uniform.rs
gear/src/core/window/: mod.rs
gear/src/platform/: mac.rs  mod.rs
gear/src/platform/mac/: window.rs
gear/src/prelude/: mod.rs
gear/src/renderer/: mod.rs  opengl.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
sandbox/src/layers/: mod.rs  root_layer.rs
