[package]
name = "gear"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
dyn-clone = "1.0.9"
glfw = "0.47.0"

[build-dependencies]
gl_generator = "0.14.0"